<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_font_size"
        android:title="@string/size">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_font_small"
                    android:title="@string/small"/>
                <item
                    android:id="@+id/menu_font_medium"
                    android:title="@string/center"/>
                <item
                    android:id="@+id/menu_font_large"
                    android:title="@string/big"/>
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/menu_normal"
        android:title="@string/normalmenu"/>

    <item
        android:id="@+id/menu_font_color"
        android:title="@string/color">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_color_red"
                    android:title="@string/red"/>
                <item
                    android:id="@+id/menu_color_black"
                    android:title="@string/black"/>
                <item
                    android:id="@+id/menu_color_blue"
                    android:title="@string/blue"/>
                <item
                    android:id="@+id/menu_color_green"
                    android:title="@string/green"/>
                <item
                    android:id="@+id/menu_color_purple"
                    android:title="@string/purple"/>
                <item
                    android:id="@+id/menu_color_orange"
                    android:title="@string/orange"/>
            </group>
        </menu>
    </item>

</menu>